full experiment works with the list_1
Added scripts for generating the file names and also converting the audio files from wav to mp3

--- a/experiment.html
+++ b/experiment.html
@@ -17,7 +17,8 @@
     <script src="jspsych/plugin-audio-keyboard-response.js"></script>
 
     <!-- DATA -->
-    <script src="data/practice_list.js"></script>
+    <script src="data/lists/practice_list.js"></script>
+    <script src="data/lists/1_list.js"></script>
 
     <!--STYLESHEETS-->
     <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
