--- a/experiment.html
+++ b/experiment.html
@@ -18,10 +18,10 @@
 
     <!-- DATA -->
     <script src="data/lists/practice_list.js"></script>
-    <script src="data/lists/1_list.js"></script>
-    <script src="data/lists/2_list.js"></script>
-    <script src="data/lists/3_list.js"></script>
-    <script src="data/lists/4_list.js"></script>
+    <script src="data/lists/list_1.js"></script>
+    <script src="data/lists/list_2.js"></script>
+    <script src="data/lists/list_3.js"></script>
+    <script src="data/lists/list_4.js"></script>
 
     <!--STYLESHEETS-->
     <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
