--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="jspsych/plugin-preload.js"></script>
     <script src="jspsych/plugin-html-button-response.js"></script>
     <script src="jspsych/plugin-call-function.js"></script>
+    <script src="jspsych/plugin-instructions.js"></script>
     <script src="jspsych/plugin-fullscreen.js"></script>
     <script src="jspsych/plugin-audio-keyboard-response.js"></script>
 
